--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/appsettings.json
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=br02-wdb1\\mssqlserver_prd1;Database=PLEDIGITAL2;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+  }
 }
