--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Properties/launchSettings.json
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/Properties/launchSettings.json
@@ -1,28 +1,33 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": true,
     "anonymousAuthentication": false,
     "iisExpress": {
-      "applicationUrl": "http://localhost:14099",
-      "sslPort": 44320
+      "applicationUrl": "http://localhost:59935",
+      "sslPort": 44321
     }
   },
   "profiles": {
-    "LE_Digital_2_Blazor_Server_WebApp": {
+    "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7060;http://localhost:5060",
+      "applicationUrl": "https://localhost:7064;http://localhost:5229",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "windowsAuthentication": true,
+      "anonymousAuthentication": false
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "windowsAuthentication": true,
+      "anonymousAuthentication": false
     }
   }
 }
