--- a/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/appsettings.json
+++ b/LE_Digital_2.0_Blazor_Server_WebApp/LE_Digital_2.0_Blazor_Server_WebApp/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=br02-wdb1\\mssqlserver_prd1;Database=PLEDIGITAL2;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=br02-wdb1\\mssqlserver_prd1;Database=PLEDIGITAL2;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=br02-wdb1\\mssqlserver_prd1;Database=PLEDIGITAL2;User Id=gestorpnl_user;Password=gestorpnl_user@2023;Encrypt=True;TrustServerCertificate=True;"
   }
 }
